@@ -2,7 +2,7 @@ Source: pam-shield
 Section: admin
 Priority: optional
 Maintainer: Jonathan Niehof <jtniehof@gmail.com>
-Build-Depends: debhelper (>= 5), libgdbm-dev, libpam0g-dev, quilt, autoconf, automake (>= 1.11), libtool
+Build-Depends: debhelper (>= 5), libgdbm-dev, libpam0g-dev, autoconf, automake (>= 1.11), libtool
 Standards-Version: 3.8.3
 Homepage: http://www.ka.sara.nl/home/walter/pam_shield/
 
