@@ -1,8 +1,9 @@
 pam-shield (0.9.2-4) unstable; urgency=low
 
   * New maintainer. (Closes: #572656).
+  * Switch to dpkg-source 3.0 (quilt) format.
 
- -- Jonathan Niehof <jtniehof@gmail.com>  Tue, 06 Apr 2010 20:58:12 -0400
+ -- Jonathan Niehof <jtniehof@gmail.com>  Tue, 06 Apr 2010 21:33:39 -0400
 
 pam-shield (0.9.2-3.2) unstable; urgency=low
 
